fix: collapsable pages overview in mobile view
Faulty z-index prevented "click to close" behaviour.
Also fix brand image sizing.
Disable dropdown with component versions again in side menu.

--- a/src/css/customisations.css
+++ b/src/css/customisations.css
@@ -238,7 +238,7 @@ footer svg.icon:hover {
   fill: var(--footer-font-color);
 }
 
-.navbar img {
+header > nav img {
   max-height: calc(var(--navbar-height) * 0.6);
   padding-right: 1rem;
   width: auto;
