--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -153,7 +153,7 @@ html.is-clipped--nav {
 
 .nav-panel-explore {
   background: var(--nav-background);
-  display: flex;
+  display: none;
   flex-direction: column;
   position: absolute;
   top: 0;
