--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -146,8 +146,8 @@
   --doc-max-width: calc(720 / var(--rem-base) * 1rem);
   --doc-max-width--desktop: calc(1028 / var(--rem-base) * 1rem);
   /* stacking */
-  --z-index-nav: 2;
-  --z-index-toolbar: 1;
+  --z-index-nav: 1;
+  --z-index-toolbar: 2;
   --z-index-page-version-menu: 3;
   --z-index-navbar: 4;
 }
